# lean-audit-shell

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml
benches/: filter_bench.rs  startup_bench.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/audit/: mod.rs  record.rs
src/config/: mod.rs  types.rs
src/filter/: matcher.rs  mod.rs
src/otel/: exporter.rs  mod.rs  shutdown.rs
src/repl/: completer.rs  display.rs  mod.rs
src/shell/: mod.rs  powershell.rs  process.rs  zsh.rs
tests/: audit_tests.rs  binary_tests.rs  config_tests.rs  filter_tests.rs  interactive_tests.rs  repl_tests.rs  shell_tests.rs
