[package]
name    = "leash"
version = "0.1.0"
edition = "2021"

[lib]
name = "leash"
path = "src/lib.rs"

[[bin]]
name = "leash"
path = "src/main.rs"

[features]
default = []
otel = ["dep:tokio", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
# Shell / PTY
# TODO Phase 5: replace with git dep on wezterm-pty for correct ConPTY flags
portable-pty = "0.8"
rustyline    = "17"
ctrlc        = "3"
which        = "6"
crossterm    = "0.28"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Filtering
regex = "1"

# Time / identity
chrono = { version = "0.4", features = ["serde"] }
dirs   = "5"
whoami = "1"
uuid   = { version = "1", features = ["v4"] }

# Error handling / logging
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# OTel — optional, compiled only with --features otel
[dependencies.tokio]
version  = "1"
features = ["rt", "sync", "macros"]
optional = true

[dependencies.opentelemetry]
version  = "0.31"
features = ["logs"]
optional = true

[dependencies.opentelemetry_sdk]
version  = "0.31"
features = ["logs"]
optional = true

[dependencies.opentelemetry-otlp]
version  = "0.31"
features = ["http-proto", "reqwest-blocking-client", "logs"]
optional = true

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile  = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rexpect   = "0.5"

[[bench]]
name    = "filter_bench"
harness = false

[[bench]]
name    = "startup_bench"
harness = false

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
